[gd_scene load_steps=2 format=3 uid="uid://rta3t5k7veci"]

[ext_resource type="Script" uid="uid://bbmw5slewyga" path="res://scripts/interface/adding_objects.gd" id="1_e2b3v"]

[node name="Adding_objects" type="VBoxContainer"]
custom_minimum_size = Vector2(347, 0)
offset_right = 347.0
offset_bottom = 681.0
theme_override_constants/separation = 20
script = ExtResource("1_e2b3v")

[node name="Unit" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 270)
layout_mode = 2
color = Color(0.877616, 0.877616, 0.877616, 1)

[node name="Label" type="Label" parent="Unit"]
layout_mode = 0
offset_left = 3.0
offset_right = 180.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "единичный объект"

[node name="Error" type="Label" parent="Unit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -173.5
offset_top = -63.0
offset_right = 173.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.592157, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Unit"]
layout_mode = 0
offset_left = 174.0
offset_top = 23.0
offset_right = 326.0
offset_bottom = 205.0
theme_override_constants/separation = 15

[node name="Type" type="OptionButton" parent="Unit/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
selected = 0
item_count = 4
popup/item_0/text = "Кубсат"
popup/item_0/id = 0
popup/item_1/text = "OneWeb"
popup/item_1/id = 1
popup/item_2/text = "Лемур"
popup/item_2/id = 2
popup/item_3/text = "МКС"
popup/item_3/id = 3

[node name="Label" type="Label" parent="Unit/VBoxContainer/Type"]
layout_mode = 0
offset_left = -101.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "вид спутника"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Radius" type="TextEdit" parent="Unit/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "300"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Unit/VBoxContainer/Radius"]
layout_mode = 0
offset_left = -101.0
offset_top = -5.0
offset_right = -3.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "высота (км)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Weight" type="TextEdit" parent="Unit/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "1.5"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Unit/VBoxContainer/Weight"]
layout_mode = 0
offset_left = -101.0
offset_top = -5.0
offset_right = -3.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "масса (кг)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="CrossSectionalArea" type="TextEdit" parent="Unit/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "0.25"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Unit/VBoxContainer/CrossSectionalArea"]
layout_mode = 0
offset_left = -173.0
offset_top = -12.0
offset_right = -3.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "площадь поперечного сечения (м²)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Inclination" type="TextEdit" parent="Unit/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "0"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Unit/VBoxContainer/Inclination"]
layout_mode = 0
offset_left = -175.0
offset_top = -8.0
offset_right = -3.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "наклонение (i) (градусы)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="AscendingNode" type="TextEdit" parent="Unit/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "0"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Unit/VBoxContainer/AscendingNode"]
layout_mode = 0
offset_left = -174.0
offset_top = -7.0
offset_right = -3.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "долгота восходящего узла (Ω) (градусы)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Unit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -33.0
offset_right = 115.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Добавить"

[node name="Pack" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
color = Color(0.877616, 0.877616, 0.877616, 1)

[node name="Label" type="Label" parent="Pack"]
layout_mode = 0
offset_left = 3.0
offset_right = 252.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "последовательность кубсатов"

[node name="Error" type="Label" parent="Pack"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -46.0
offset_right = 145.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.592157, 0, 0, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pack"]
layout_mode = 0
offset_left = 117.0
offset_top = 33.0
offset_right = 290.0
offset_bottom = 114.0
theme_override_constants/separation = 15

[node name="Count" type="TextEdit" parent="Pack/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "10"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Pack/VBoxContainer/Count"]
layout_mode = 0
offset_left = -101.0
offset_top = -7.0
offset_right = -3.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "количество объектов"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Start" type="TextEdit" parent="Pack/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "500"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Pack/VBoxContainer/Start"]
layout_mode = 0
offset_left = -119.0
offset_top = -7.0
offset_right = -2.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "отступ от центра (км)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Step" type="TextEdit" parent="Pack/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "1000"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Pack/VBoxContainer/Step"]
layout_mode = 0
offset_left = -88.0
offset_top = -6.0
offset_right = -3.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "шаг (км)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Pack"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -33.0
offset_right = 115.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Добавить"

[node name="Net" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
color = Color(0.877616, 0.877616, 0.877616, 1)

[node name="Label" type="Label" parent="Net"]
layout_mode = 0
offset_left = 3.0
offset_right = 252.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "сетка starlink"

[node name="Error" type="Label" parent="Net"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -46.0
offset_right = 145.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.592157, 0, 0, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Net"]
layout_mode = 0
offset_left = 117.0
offset_top = 33.0
offset_right = 290.0
offset_bottom = 114.0
theme_override_constants/separation = 15

[node name="Start" type="TextEdit" parent="Net/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "500"
scroll_past_end_of_file = true

[node name="Label" type="Label" parent="Net/VBoxContainer/Start"]
layout_mode = 0
offset_left = -116.0
offset_top = -7.0
offset_right = -4.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "отступ от центра (км)"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Step" type="HSlider" parent="Net/VBoxContainer"]
modulate = Color(0.368627, 0.156863, 0.109804, 1)
layout_mode = 2
min_value = 10.0
max_value = 180.0
value = 20.0

[node name="value" type="Label" parent="Net/VBoxContainer/Step"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -7.0
offset_right = 40.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "10"
vertical_alignment = 1

[node name="name" type="Label" parent="Net/VBoxContainer/Step"]
layout_mode = 0
offset_left = -120.0
offset_top = -6.0
offset_right = -3.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 12
text = "размер квадрата"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="Net"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -33.0
offset_right = 115.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Добавить"

[connection signal="item_selected" from="Unit/VBoxContainer/Type" to="." method="_on_unit_type_item_selected"]
[connection signal="button_down" from="Unit/Button" to="." method="_on_unit_button_down"]
[connection signal="button_down" from="Pack/Button" to="." method="_on_pack_button_down"]
[connection signal="value_changed" from="Net/VBoxContainer/Step" to="." method="_on_net_step_value_changed"]
[connection signal="button_down" from="Net/Button" to="." method="_on_net_button_down"]
