extends VBoxContainer

@onready var System = $"../../../../TextureRect/SubViewport/System"

@onready var UnitError = $Unit/Error
@onready var UnitType = $Unit/VBoxContainer/Type
@onready var UnitInclination = $Unit/VBoxContainer/Inclination
@onready var UnitAscendingNode = $Unit/VBoxContainer/AscendingNode

@onready var PackError = $Pack/Error

@onready var NetError = $Net/Error
@onready var NetStep = $Net/VBoxContainer/Step

const page_name: String = "–¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –æ–±—ä–µ–∫—Ç–æ–≤üõ∞"


func _ready() -> void:
	# –ò–∑–º–µ–Ω–µ–Ω–∏–µ —Ç–µ–∫—Å—Ç–æ–≤—ã—Ö –∑–Ω–∞—á–µ–Ω–∏–π –ø–∞—Ä–∞–º–µ—Ç—Ä–æ–≤
	for i in [UnitInclination, UnitAscendingNode]:
		i.get_child(0).set_text(str(int(i.value)) + "¬∞")
		
	NetStep.get_child(0).set_text(str(int(NetStep.value)) + "–∫–º")


# –∏–∑–º–µ–Ω–µ–Ω–∏–µ –∑–Ω–∞—á–µ–Ω–∏—è –ø–æ–ª–æ–∂–µ–Ω–∏—è –Ω–∞ –æ–∫—Ä—É–∂–Ω–æ—Å—Ç–∏ –¥–ª—è –µ–¥–∏–Ω–∏—á–Ω–æ–≥–æ
func _on_unit_inclination_value_changed(value: int) -> void:
	UnitInclination.get_child(0).set_text(str(value) + "¬∞")

# –∏–∑–º–µ–Ω–µ–Ω–∏–µ –∑–Ω–∞—á–µ–Ω–∏—è –≤—ã—Å–æ—Ç—ã –¥–ª—è –µ–¥–∏–Ω–∏—á–Ω–æ–≥–æ
func _on_unit_ascending_node_value_changed(value: int) -> void:
	UnitAscendingNode.get_child(0).set_text(str(value) + "¬∞")

# –∏–∑–º–µ–Ω–µ–Ω–∏–µ –∑–Ω–∞—á–µ–Ω–∏—è —à–∞–≥–∞ –¥–ª—è —Å–µ—Ç–∫–∏
func _on_net_step_value_changed(value: int) -> void:
	NetStep.get_child(0).set_text(str(value) + "–∫–º")


# –≤—ã–∑–æ–≤ —Å–∏–≥–Ω–∞–ª–∞ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –æ–±—ä–µ–∫—Ç–∞
func add_object(error, obj_name: String, radius: String, inclination, ascending_node):
	Settings.set_error(error)
	Settings.emit_signal("add_object", "res://scenes/objects/" + obj_name + ".tscn",
						 int(radius), inclination.value, ascending_node.value)


# –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –µ–¥–∏–Ω–∏—á–Ω–æ–≥–æ –æ–±—ä–µ–∫—Ç–∞
func _on_unit_button_down() -> void:
	var radius: String = $Unit/VBoxContainer/Radius.get_text()
	const min_r: int = 300
	
	if not radius.is_valid_int() or int(radius) < min_r:
		Settings.set_error(UnitError, "—Ä–∞–¥–∏—É—Å –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å —á–∏—Å–ª–æ–º –±–æ–ª—å—à–µ " + str(min_r))
	else:
		const objects = ["cubsat", "oneWeb", "lemur", "MKS"]
		add_object(UnitError, objects[UnitType.selected], radius, UnitInclination, UnitAscendingNode)

# –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –ø–æ—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å–Ω–æ—Å—Ç–∏ –æ–±—ä–µ–∫—Ç–æ–≤
func _on_pack_button_down() -> void:
	var count: String = $Pack/VBoxContainer/Count.get_text()
	var start: String = $Pack/VBoxContainer/Start.get_text()
	var step: String = $Pack/VBoxContainer/Step.get_text()
	const min_start: int = 300
	const min_step: int = 10
	const min_count: int = 2
	
	if not count.is_valid_int() or not start.is_valid_int() or not step.is_valid_int():
		Settings.set_error(PackError, "–ó–Ω–∞—á–µ–Ω–∏—è –¥–æ–ª–∂–Ω—ã –±—ã—Ç—å —Ü–µ–ª—ã–º–∏ —á–∏—Å–ª–∞–º–∏")
	elif int(start) < min_start:
		Settings.set_error(PackError, "–û—Ç—Å—Ç—É–ø –æ—Ç —Ü–µ–Ω—Ç—Ä–∞ –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –±–æ–ª—å—à–µ " + str(min_start))
	elif int(step) < min_step:
		Settings.set_error(PackError, "–®–∞–≥ –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –±–æ–ª—å—à–µ " + str(min_step))
	elif int(count) < min_count:
		Settings.set_error(PackError, "–ö–æ–ª–∏—á–µ—Å—Ç–≤–æ –æ–±—ä–µ–∫—Ç–æ–≤ –¥–æ–ª–∂–Ω–æ –±—ã—Ç—å –±–æ–ª—å—à–µ " + str(min_count))
	else:
		Settings.set_error(PackError)
		for i in int(count):
			Settings.emit_signal("add_object", "res://scenes/objects/cubsat.tscn", int(start) + i * int(step), 0, 90)


# –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ —Å–µ—Ç–∫–∏ starlink
func _on_net_button_down() -> void:
	var start: String = $Net/VBoxContainer/Start.get_text()
	const min_start: int = 300
	if not start.is_valid_int() or int(start) < min_start:
		Settings.set_error(NetError, "–û—Ç—Å—Ç—É–ø –æ—Ç —Ü–µ–Ω—Ç—Ä–∞ –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å —á–∏—Å–ª–æ–º –±–æ–ª—å—à–µ " + str(min_start))
	else:
		Settings.set_error(NetError)
		Settings.emit_signal("add_net", int(start), NetStep.value)
